bauer/tests/ui/tuple-too-few-names.fail.stderr
error: Fewer names than elements in tuple
 --> tests/ui/tuple-too-few-names.fail.rs:5:20
  |
5 |     #[builder(tuple(a, b))]
  |                    ^^^^^^
